add failOnMerge config to prevent MERGE code generation (#443)
defaults to false.